@startuml
hide empty members

note "Each deployer has associated its own ActionBatcher and Report\nfollowing the same shown pattern" as N1

class DeploymentMetadata
class CreateXScript

class CommonDeployer
class HubDeployer
class SpokeDeployer
class AdaptersDeployer

class ValuationsDeployer
class HubManagersDeployer
class ExtendedHubDeployer

class SpokeManagersDeployer
class VaultsDeployer
class HooksDeployer
class ExtendedSpokeDeployer

class FullDeployer {
    + function run()
}

class CommonInput << (S,application) JsonConfig >>
class AdaptersInput << (S,application) JsonConfig >>

CommonDeployer -up-|> DeploymentMetadata
CommonDeployer -up-|> CreateXScript
HubDeployer -up-|> CommonDeployer
SpokeDeployer -up-|> CommonDeployer
AdaptersDeployer -up-|> CommonDeployer

HubManagersDeployer -up-|> HubDeployer
ValuationsDeployer -up-|> HubDeployer

ExtendedHubDeployer -up-|> HubManagersDeployer
ExtendedHubDeployer -up-|> ValuationsDeployer

SpokeManagersDeployer -up-|> SpokeDeployer
VaultsDeployer -up-|> SpokeDeployer
HooksDeployer -up-|> SpokeDeployer

ExtendedSpokeDeployer -up-|> SpokeManagersDeployer
ExtendedSpokeDeployer -up-|> VaultsDeployer
ExtendedSpokeDeployer -up-|> HooksDeployer

FullDeployer -up-|> ExtendedHubDeployer
FullDeployer -up-|> ExtendedSpokeDeployer
FullDeployer -up---|> AdaptersDeployer

CommonDeployer -> CommonInput
AdaptersDeployer -left> AdaptersInput

note right of ExtendedSpokeDeployer: Used in spoke ITs
note right of HubDeployer: Used in hub ITs
note right of FullDeployer: Used in end-to-end ITs,\ntestnets and productions
@enduml
